<resources>
    <string name="app_name">SnapCencus</string>
    <string name="welcome">Selamat Datang</string>
    <string name="show_data_penduduk">Lihat data Penduduk</string>
    <string name="show_data_user">Lihat data User</string>
    <string name="scan_dokumen">Scan Dokumen</string>
    <string name="logout">Log Keluar</string>
    <string name="title_ocr">Gunakan OCR</string>
    <string name="message_ocr">Apakah Anda ingin menggunakan OCR untuk memindai data KTP?</string>
    <string name="positive_button_ocr">Ya</string>
    <string name="neutral_button_ocr">Input Manual</string>
    <string name="ktp">Kartu Tanda Penduduk!</string>
    <string name="open_camera">Buka Camera</string>
    <string name="open_gallery">Buka Galeri</string>
    <string name="hasil_scan_ktp">Hasil Scan KTP</string>
    <string name="nik">NIK</string>
    <string name="nama">Nama</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="alamat">Alamat</string>
    <string name="rt">RT</string>
    <string name="rw">RW</string>
    <string name="kel_desa">Kel/Desa</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="agama">Agama</string>
    <string name="status_perkawinan">Status Perkawinan</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="kewarganegaraan">Kewarganegaraan</string>
    <string name="gol_darah">Golongan Darah</string>
    <string name="save">Simpan</string>
    <string name="update">Perbarui</string>
    <string name="kartu_keluarga">Kartu Keluarga!</string>
    <string name="hasil_scan_kk">Hasil Scan Kartu Keluarga</string>
    <string name="nama_ayah">Nama Ayah</string>
    <string name="nama_ibu">Nama Ibu</string>
    <string name="hubungan_keluarga">Hubungan dalam Keluarga</string>
    <string name="pendidikan_terakhir">Pendidikan Terakhir</string>
    <string name="narahubung_warga">Cara hubung Warga</string>
    <string name="permission_denied_message">Izin akses kamera tidak diberikan</string>
    <string name="empty_image_warning_message">Silahkan mmasukkan gambar KTP terlebih dahulu</string>
    <string name="camera_error_message">Maaf, telah terjadi kesalahan</string>
    <string name="picker_error_message">Tidak ada media yang dipilih</string>
    <string name="photo_picker_error_message">Photo Picker tidak didukung pada perangkat ini</string>
    <string name="text_recognized_error_message">Teks tidak dikenali</string>
    <string name="capture_gambar">Capture gambar</string>
    <string name="data_alamat">ALAMAT</string>
    <string name="alamat_kk">Alamat</string>
    <string name="desa_kelurahan_kk">Desa/Kelurahan KK</string>
    <string name="rt_kk">RT</string>
    <string name="alamat_sebelumnya">Alamat Sebelumnya</string>
    <string name="rw_kk">RW</string>
    <string name="email">Email</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="telegram">Telegram</string>
    <string name="cara_hubungi_warga">Cara Hubungi Warga</string>
    <string name="dusun_kk">Dusun</string>
    <string name="data_diri">DATA DIRI</string>
    <string name="nama_lengkap_tanpa_gelar">Nama Lengkap (Tanpa Gelar)</string>
    <string name="status_kepemilikan_identitas">Status Kepemilikan Identitas</string>
    <string name="identitas_elektronik">Identitas Elektronik</string>
    <string name="status_rekam">Status Rekam</string>
    <string name="tag_id_card">Tag ID Card</string>
    <string name="tempat_penerbitan_ktp">Tempat Penerbitan KTP</string>
    <string name="searchbar_hint">Masukkan NIK / Nama</string>
    <string name="nomor_kk_sebelumnya">Nomor KK Sebelumnya</string>
    <string name="status_penduduk">Status Penduduk</string>
    <string name="tanggal_penerbitan_ktp">Tanggal Penerbitan KTP</string>
    <string name="data_kelahiran">DATA KELAHIRAN</string>
    <string name="nomor_akta_kelahiran">Nomor Akta Kelahiran</string>
    <string name="waktu_kelahiran">Waktu Kelahiran</string>
    <string name="tempat_dilahirkan">Tempat Dilahirkan</string>
    <string name="anak_ke">Anak Ke (Isi dengan Angka)</string>
    <string name="penolong_kelahiran">Penolong Kelahiran</string>
    <string name="berat_lahir">Berat Lahir (Gram)</string>
    <string name="panjang_lahir">Panjang Lahir (Cm)</string>
    <string name="pendidikan_dan_pekerjaan">PENDIDIKAN DAN PEKERJAAN</string>
    <string name="pendidikan_dalam_kk">Pendidikan dalam KK</string>
    <string name="pendidikan_yang_sedang_ditempuh">Pendidikan sedang ditempuh</string>
    <string name="data_kewarganegaraan">Data KEWARGANEGARAAN</string>
    <string name="suku_etnis">Suku / Etnis</string>
    <string name="status_warga_negara">Status Warga Negara</string>
    <string name="nomor_paspor">Nomor Paspor</string>
    <string name="tanggal_berakhir_paspor">Tanggal berakhir Paspor</string>
    <string name="nomor_kitas_kitap">Nomor KITAS/KITAP</string>
    <string name="negara_asal">Negara Asal</string>
    <string name="data_ortu">DATA ORANG TUA</string>
    <string name="nik_ayah">NIK Ayah</string>
    <string name="nik_ibu">NIK Ibu</string>
    <string name="data_perkawinan">STATUS PERKAWINAN</string>
    <string name="nomor_akta_nikah">Nomor Akta Nikah (Buku Nikah)</string>
    <string name="tanggal_perkawinan">Tanggal Perkawinan (Wajib diisi apabila status KAWIN)</string>
    <string name="tanggal_perceraian">Tanggal Perceraian (Wajib diisi apabila status CERAI)</string>
    <string name="data_kesehatan">DATA KESEHATAN</string>
    <string name="cacat">Cacat</string>
    <string name="sakit_menahun">Sakit Menahun</string>
    <string name="akseptor_kb">Akseptor KB</string>
    <string name="status_kehamilan">Status Kehamilan</string>
    <string name="asuransi_kesehatan">Asuransi Kesehatan</string>
    <string name="nomor_asuransi">Nama/Nomor Asuransi</string>
    <string name="nomor_bpjs">Nomor BPJS Ketenagakerjaan</string>
    <string name="data_lainnya">LAINNYA</string>
    <string name="dapat_membaca_huruf">Dapat Membaca Huruf</string>
    <string name="keterangan">Keterangan</string>
    <string name="desa_bulila">Desa Bulila</string>
    <string name="anda_masuk_sebagai">Anda Masuk Sebagai</string>
    <string name="masukkan_pin">Masukkan PIN:</string>
    <string name="press_1">1</string>
    <string name="press_2">2</string>
    <string name="press_3">3</string>
    <string name="press_4">4</string>
    <string name="press_5">5</string>
    <string name="press_6">6</string>
    <string name="press_7">7</string>
    <string name="press_8">8</string>
    <string name="press_9">9</string>
    <string name="clear">C</string>
    <string name="press_0">0</string>
    <string name="ok">OK</string>
    <string name="retry">Coba lagi</string>
    <string name="memuat_data">Memuat Data...</string>
    <string name="gunakan_ocr">Gunakan OCR?</string>
    <string name="yes">Ya</string>
    <string name="tidak">Input manual</string>
    <string name="ubah_data_penduduk">Ubah Data Penduduk</string>
    <string name="pilih_identitas_el">Pilih identitas-EL</string>
    <string name="belum">BELUM</string>
    <string name="ktp_el">KTP_EL</string>
    <string name="kia">KIA</string>
    <string name="pilih_status_rekam">Pilih status rekam</string>
    <string name="belum_wajib">BELUM WAJIB</string>
    <string name="belum_rekam">BELUM REKAM</string>
    <string name="sudah_rekam">SUDAH REKAM</string>
    <string name="card_printed">CARD PRINTED</string>
    <string name="print_ready_record">PRINT READY RECORD</string>
    <string name="card_shipped">CARD SHIPPED</string>
    <string name="send_for_printing">SEND FOR PRINTING</string>
    <string name="card_issued">CARD ISSUED</string>
    <string name="pilih_hubungan_keluarga">Pilih Hubungan Keluarga</string>
    <string name="kepala_keluarga">KEPALA KELUARGA</string>
    <string name="suami">SUAMI</string>
    <string name="istri">ISTRI</string>
    <string name="anak">ANAK</string>
    <string name="menantu">MENANTU</string>
    <string name="cucu">CUCU</string>
    <string name="orang_tua">ORANG TUA</string>
    <string name="mertua">MERTUA</string>
    <string name="famili_lain">FAMILI LAIN</string>
    <string name="pembantu">PEMBANTU</string>
    <string name="lainnya">LAINNYA</string>
    <string name="pilih_jenis_kelamin">Pilih jenis kelamin</string>
    <string name="laki_laki">LAKI-LAKI</string>
    <string name="perempuan">PEREMPUAN</string>
    <string name="pilih_agama">Pilih Agama</string>
    <string name="islam">ISLAM</string>
    <string name="kristen">KRISTEN</string>
    <string name="katholik">KATHOLIK</string>
    <string name="hindu">HINDU</string>
    <string name="budha">BUDHA</string>
    <string name="khonghucu">KHONGHUCU</string>
    <string name="kepercayaan_terhadap_tuhan_yme">Kepercayaan Terhadap Tuhan YME / Lainnya</string>
    <string name="pilih_status">Pilih Status Penduduk</string>
    <string name="tetap">Tetap</string>
    <string name="tidak_tetap">Tidak Tetap</string>
    <string name="pilih_tempat_lahir">Pilih Tempat Lahir</string>
    <string name="rs_rb">RS/RB</string>
    <string name="puskesmas">PUSKESMAS</string>
    <string name="polindes">POLINDES</string>
    <string name="rumah">RUMAH</string>
    <string name="pilih_jenis_kelahiran">Pilih Jenis Kelahiran</string>
    <string name="tunggal">TUNGGAL</string>
    <string name="kembar_2">KEMBAR 2</string>
    <string name="kembar_3">KEMBAR 3</string>
    <string name="kembar_4">KEMBAR 4</string>
    <string name="pilih_penolong_kelahiran">Pilih Penolong Kelahiran</string>
    <string name="dokter">DOKTER</string>
    <string name="bidan_perawat">BIDAN/PERAWAT</string>
    <string name="dukun">DUKUN</string>
    <string name="pilih_pendidikan">Pilih Pendidikan</string>
    <string name="belum_sekolah">TIDAK / BELUM SEKOLAH</string>
    <string name="belum_tamat_sd">BELUM TAMAT SD/SEDERAJAT</string>
    <string name="tamat_sd">TAMAT SD / SEDERAJAT</string>
    <string name="sltp">SLTP/SEDERAJAT</string>
    <string name="slta">SLTA / SEDERAJAT</string>
    <string name="diploma_1_dan_2">DIPLOMA I / II</string>
    <string name="diploma_3">AKADEMI / DIPLOMA III / S. MUDA</string>
    <string name="strata_1">DIPLOMA IV / STRATA I</string>
    <string name="strata_2">STRATA II</string>
    <string name="strata_3">STRATA III</string>
    <string name="belum_masuk_tk">BELUM MASUK TK/KELOMPOK BERMAIN</string>
    <string name="sedang_tk">SEDANG TK/KELOMPOK BERMAIN</string>
    <string name="tidak_pernah_sekolah">TIDAK PERNAH SEKOLAH</string>
    <string name="sedang_sd">SEDANG SD/SEDERAJAT</string>
    <string name="tidak_tamat_sd">TIDAK TAMAT SD/SEDERAJAT</string>
    <string name="sedang_sltp">SEDANG SLTP/SEDERAJAT</string>
    <string name="tidak_tamat_sltp">TIDAK TAMAT SLTP/SEDERAJA</string>
    <string name="sedang_slta">SEDANG SLTA/SEDERAJAT</string>
    <string name="tidak_tamat_slta">TIDAK TAMAT SLTA/SEDERAJAT</string>
    <string name="sedang_d1">SEDANG D-1/SEDERAJAT</string>
    <string name="sedang_d2">SEDANG D-2/SEDERAJAT</string>
    <string name="sedang_d3">SEDANG D-3/SEDERAJAT</string>
    <string name="sedang_slb_a">SEDANG SLB A/SEDERAJAT</string>
    <string name="sedang_slb_b">SEDANG SLB B/SEDERAJAT</string>
    <string name="sedang_slb_c">SEDANG SLB C/SEDERAJAT</string>
    <string name="tidak_dapat_membaca">TIDAK DAPAT MEMBACA DAN MENULIS HURUF LATIN/ARAB</string>
    <string name="tidak_sedang_sekolah">TIDAK SEDANG SEKOLAH</string>
    <string name="pilih_pekerjaan">Pilih Pekerjaan</string>
    <string name="tidak_bekerja">BELUM/TIDAK BEKERJA</string>
    <string name="back">Kembali</string>
    <string name="flash_camera_content_desc">Flash kamera</string>
    <string name="logo_bulila_content_desc">Logo Desa Bulila</string>
    <string name="masuk_sebagai">Masuk sebagai</string>
    <string name="name_placeholder">User</string>
</resources>