<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    card_view:cardCornerRadius="13dp"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp">

        <TextView
            android:id="@+id/tvHeadline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/anda_masuk_sebagai"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRole"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tvHeadline"
            tools:text="Admin!" />

        <TextView
            android:id="@+id/tvSubHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/masukkan_pin"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tvRole" />

        <EditText
            android:id="@+id/EdtInputPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_rounded"
            android:hint="*  *  *  *  *  *"
            android:maxLength="6"
            android:textAlignment="center"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tvSubHeadline" />

        <Button
            android:id="@+id/btn1"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:text="@string/press_1"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toStartOf="@+id/btn2"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/EdtInputPin" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/press_2"
            style="@style/Widget.Material3.Button.TextButton"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="@+id/btn1"
            card_view:layout_constraintEnd_toStartOf="@+id/btn3"
            card_view:layout_constraintStart_toEndOf="@+id/btn1"
            card_view:layout_constraintTop_toTopOf="@+id/btn1" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:background="@color/white"
            android:text="@string/press_3"
            android:textColor="@color/primary"
            android:textSize="26sp"
            style="@style/Widget.Material3.Button.TextButton"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="@+id/btn2"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/btn2"
            card_view:layout_constraintTop_toTopOf="@+id/btn2" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="@color/white"
            android:text="@string/press_4"
            android:textColor="@color/primary"
            style="@style/Widget.Material3.Button.TextButton"
            android:textSize="26sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toStartOf="@+id/btn5"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/btn1" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/press_5"
            style="@style/Widget.Material3.Button.TextButton"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="@+id/btn4"
            card_view:layout_constraintEnd_toStartOf="@+id/btn6"
            card_view:layout_constraintStart_toEndOf="@+id/btn4"
            card_view:layout_constraintTop_toTopOf="@+id/btn4" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:background="@color/white"
            android:text="@string/press_6"
            style="@style/Widget.Material3.Button.TextButton"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="@+id/btn5"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/btn5"
            card_view:layout_constraintTop_toTopOf="@+id/btn5" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="@color/white"
            android:text="@string/press_7"
            style="@style/Widget.Material3.Button.TextButton"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toStartOf="@+id/btn8"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/btn4" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/press_8"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:textStyle="bold"
            style="@style/Widget.Material3.Button.TextButton"
            card_view:layout_constraintBottom_toBottomOf="@+id/btn7"
            card_view:layout_constraintEnd_toStartOf="@+id/btn9"
            card_view:layout_constraintStart_toEndOf="@+id/btn7"
            card_view:layout_constraintTop_toTopOf="@+id/btn7" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:background="@color/white"
            android:text="@string/press_9"
            style="@style/Widget.Material3.Button.TextButton"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="@+id/btn8"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/btn8"
            card_view:layout_constraintTop_toTopOf="@+id/btn8" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="24dp"
            android:background="@color/white"
            android:text="@string/clear"
            style="@style/Widget.Material3.Button.TextButton"
            android:textColor="@color/red"
            android:textSize="26sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/btn0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/btn7" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/press_0"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:textStyle="bold"
            style="@style/Widget.Material3.Button.TextButton"
            card_view:layout_constraintBottom_toBottomOf="@+id/btnClear"
            card_view:layout_constraintEnd_toStartOf="@+id/btnOk"
            card_view:layout_constraintStart_toEndOf="@+id/btnClear"
            card_view:layout_constraintTop_toTopOf="@+id/btnClear" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_rounded"
            android:backgroundTint="@color/primary"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="@+id/btn0"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/btn0"
            card_view:layout_constraintTop_toTopOf="@+id/btn0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

